1.11
 * New Features:
   * mid3v2 can now set URL frames. (Vladislav Naumov)
 * Bug Fixes:
   * mid3iconv: Skip all timestamp frames. (Lukáš Lalinský)
   * WavPack: More accurate length calculation. ('ak')
   * PairedTextFrame: Fix typo in documentation. (Lukáš Lalinský)
 * API:
   * Metadata no longer inherits from dict.
   * Relatedly, the MRO has changed on several types.
   * More documentation for MP4 atoms. (Lukáš Lalinský)

1.10.1 - 2007.01.23
 * Bug Fixes:
   * Documentation mentions ASF support.
   * APEv2 flags and valid keys are fixed.
   * Tests pass on Python 2.3 again.

1.10 - 2007.01.21
 * New Features:
   * FLAC: Skip ID3 tags. Added option to delete them on save.
   * EncodedTextSpec: Make private members more private.
   * Corrupted Oggs generated by GStreamer (e.g. Sound Juicer) can be read.
   * FileTypes have a .mime attribute which is a list of likely MIME types
     for the file.
   * ASF (WMA/WMV) support.
 * Bug Fixes:
   * ID3: Fixed reading of v2.3 tags with unsynchronized data.
   * ID3: The data length indicator for compressed tags is written
     as a synch-safe integer.

1.9 - 2006.12.09
 * New Features:
   * OptimFROG support.
   * New mutagen.mp4 module with support for multiple data fields per atom
     and more compatible tag saving implementation.
   * Support for embedded pictures in FLAC files (new in FLAC 1.1.3).
 * mutagen.m4a is deprecated in favor of mutagen.mp4.

1.8 - 2006.10.02
 * New Features:
   * MonkeysAudio support. (#851, Lukáš Lalinský)
   * APEv2 support on Python 2.5; see API-NOTES. (#852)

1.7.1 - 2006.09.24
 * Bug Fixes:
   * Expose full ID3 tag size as .size. (#848)

 * New Features:
   * Musepack Replay Gain data is available in SV7 files.

1.7 - 2006.09.15
 * Bug Fixes:
   * Trying to save an empty tag deletes it. (#813)
   * The semi-public API removal mentioned in 1.6's API-NOTES happened.
   * Stricter frame ID validation. (#830, Lukáš Lalinský)